<resources>
    <string name="app_name">E-MAPIS</string>
    <string name="edit_username">Enter username</string>
    <string name="edit_password">Enter password</string>
    <string name="edit_email">Enter email</string>
    <string name="button_login">Login</string>
    <string name="button_stats_about_vehicle">Statistics about your vehicle</string>
    <string name="button_new_trip">Start a new trip!</string>
    <string name="title_activity_trip_settings">TripSettingsActivity</string>
    <string name="title_activity_google_location">GoogleLocation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user_remove_vehicle">UserRemoveVehicleActivity</string>
    <string name="DummyText"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis justo leo, blandit at nunc vel, rutrum viverra arcu. Duis non ornare leo. Quisque ex eros, gravida vel nisi ac, interdum aliquet leo. Quisque sit amet eleifend tellus, vitae mollis enim. Pellentesque sed posuere ligula. Aenean porttitor lacus eget facilisis hendrerit. Mauris cursus est purus, at tempus massa pretium quis. Donec nec ultrices ipsum, nec gravida ligula. Phasellus in luctus felis, eu volutpat tellus.

Vivamus feugiat sodales risus, quis viverra magna lacinia vel. Quisque egestas diam vel enim feugiat malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ante risus, laoreet eu elit in, tempus ullamcorper purus. Nullam facilisis, lectus non ornare fringilla, enim purus feugiat massa, a viverra lorem lorem at ligula. Phasellus tempor nunc turpis, ut aliquet enim consectetur ut. Quisque neque mauris, sollicitudin nec lorem eget, vehicula tristique lacus. Vivamus lacinia elit est, nec sagittis erat auctor sit amet. Donec auctor justo et turpis iaculis, et laoreet elit scelerisque. Ut ac elit molestie nulla sodales suscipit id lobortis diam. Cras tempor vestibulum mi eu efficitur. Curabitur id sem tempus sapien mattis blandit. Mauris dignissim nibh ut pretium egestas. Nam a nulla tempor, facilisis magna ut, rutrum elit.

Quisque semper mi quis placerat molestie. In vel dapibus turpis, porttitor congue sem. Nam commodo ante ut tortor rhoncus condimentum. Vivamus eu augue enim. Aliquam erat volutpat. Sed ac enim tincidunt, eleifend ipsum id, egestas lorem. Integer varius dolor id nulla suscipit, vestibulum auctor nunc condimentum. Nam in justo dignissim, elementum ex eget, euismod quam. Aenean vestibulum suscipit commodo. Nam sed tempor diam. Nullam vehicula arcu in mauris ullamcorper, at tempus tortor lacinia. Integer pellentesque euismod sem eu tristique. Nullam feugiat luctus blandit.

Pellentesque mi ipsum, tempus vitae pellentesque id, rutrum in eros. Duis erat leo, auctor ac lorem at, egestas lacinia lacus. Pellentesque id magna ut ante condimentum vestibulum. Nulla a fringilla urna, nec aliquet ante. Nulla facilisi. Etiam at tortor vel velit tempor placerat nec a quam. Cras dictum elit sed lacus vulputate rhoncus. Quisque sit amet aliquet elit. Nulla dictum tincidunt sem, ac scelerisque sem vestibulum nec. Maecenas sit amet nulla felis. Nam at sem eros. Nulla sagittis ligula eu purus condimentum, ac accumsan orci convallis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque malesuada laoreet. Praesent quam neque, rhoncus ac pharetra et, maximus pellentesque tortor.

Mauris pellentesque tempus purus, non placerat quam dapibus consectetur. Phasellus sem nisi, fringilla sit amet mi sit amet, scelerisque vehicula ligula. Curabitur non libero a dui feugiat tempor ut sed magna. Phasellus accumsan eget diam non pretium. Fusce porta erat sit amet quam condimentum tincidunt. Integer nec ultrices nibh. In rutrum nec lorem in elementum. Pellentesque vel pharetra neque. Donec et faucibus nunc. Ut interdum mattis nunc nec tincidunt. Praesent interdum, urna ac ultrices pharetra, lacus purus finibus nunc, nec mattis dui lorem ac augue. Curabitur accumsan, diam ac fringilla convallis, turpis leo vestibulum orci, quis rutrum erat tortor vitae enim. Maecenas non lacus neque.

Cras libero odio, maximus scelerisque tincidunt nec, luctus at ipsum. Proin nec dui erat. Etiam rhoncus, felis a interdum lobortis, diam metus tincidunt leo, ut sagittis est sapien nec lorem. Phasellus ut auctor ligula. Morbi ac dignissim elit, et sodales elit. Donec pharetra nibh consequat, scelerisque urna vitae, tincidunt nisi. Phasellus facilisis, enim aliquet placerat tempus, nunc felis mattis tellus, eget lacinia arcu nulla sed eros. Donec in scelerisque erat. Nunc feugiat neque in dapibus bibendum.

Nunc euismod neque sapien, non mollis ex malesuada non. Morbi ac velit diam. Sed tincidunt tortor ut rhoncus mattis. Duis justo dolor, ultrices vitae mollis quis, consectetur vel dolor. Donec suscipit lorem eget neque vulputate accumsan. Nunc dignissim mauris ac ante interdum faucibus. Aliquam erat volutpat. Aliquam eget felis non libero mattis dictum.

Maecenas pretium posuere pretium. Mauris quis augue tristique, sagittis elit in, iaculis ante. Sed vitae lectus mollis, rhoncus turpis at, ultrices lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis eget sollicitudin ante. Pellentesque sit amet eros consequat, maximus odio at, hendrerit tellus. Morbi urna justo, fermentum at pharetra eget, malesuada eu libero. Proin euismod est arcu, sed ornare urna aliquet et. Duis viverra fringilla pellentesque. Maecenas turpis erat, dictum nec leo quis, aliquam vehicula arcu. Nulla consectetur egestas arcu, quis lobortis neque semper ut. Curabitur in iaculis ante. Ut non scelerisque velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in odio lacus. Mauris semper mi sit amet nisl gravida, vitae ultrices magna varius.

Nam semper iaculis enim, eu pharetra nibh commodo quis. Etiam ullamcorper mollis suscipit. Aliquam laoreet leo turpis, eu scelerisque magna dignissim non. Mauris est tellus, pellentesque a magna et, euismod vehicula justo. Suspendisse in dolor at sapien lacinia finibus vitae eu orci. Sed massa lectus, sodales semper ipsum id, facilisis ultricies nulla. Aenean euismod ante nisl, in tempus ligula mattis sit amet. Sed libero nibh, vestibulum eget ipsum at, tempor rutrum ligula. Nunc ac mauris lectus. Nam ac eros id lectus tempus rutrum vitae a ante. Etiam lobortis fermentum ultrices. Donec fringilla mauris eget nisi scelerisque dapibus. Phasellus finibus egestas aliquet. Integer interdum massa at ornare ullamcorper. Curabitur id placerat tortor. In mauris libero, eleifend non massa eu, porttitor suscipit urna.

Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras vitae mauris aliquet, semper enim quis, lobortis neque. Vivamus vitae libero eget ante scelerisque mattis nec ornare lectus. Pellentesque et congue velit. Maecenas non hendrerit urna, eu bibendum risus. Etiam efficitur, est nec rutrum ullamcorper, arcu lorem molestie erat, eget ornare velit sem quis ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque consequat turpis sed auctor suscipit. Suspendisse potenti."
    </string>

    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">

    </style>

    <style name="AppTheme.CustomTheme">
        <item name="android:windowIsTranslucent">true</item>
        <item name="android:windowCloseOnTouchOutside">true</item>
    </style>
</resources>