<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/registerUsernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="20"
        android:hint="@string/edit_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="20"
        android:hint="@string/edit_password"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!#$%'()*+,-./:;=>?@[\]^_`{|}~"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintTextColor"
        app:layout_constraintEnd_toEndOf="@+id/registerUsernameText"
        app:layout_constraintStart_toStartOf="@+id/registerUsernameText"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameText" />

    <EditText
        android:id="@+id/registerEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="30"
        android:hint="@string/edit_email"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.@"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintTextColor"
        app:layout_constraintEnd_toEndOf="@+id/registerPasswordText"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordText" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:onClick="onClickRegister"
        android:text="Register!"
        android:textColor="@color/textColor"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="@+id/registerEmailText"
        app:layout_constraintStart_toStartOf="@+id/registerEmailText"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailText" />

    <Button
        android:id="@+id/cancelRegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:backgroundTint="@color/red"
        android:onClick="onClickGoBack"
        android:text="Cancel"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailText" />

    <ProgressBar
        android:id="@+id/loadingBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="156dp"
        android:layout_height="139dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/cancelRegisterButton"
        app:layout_constraintVertical_bias="0.737" />
</androidx.constraintlayout.widget.ConstraintLayout>